# mucencfs

./: .gitignore
Client/: Angoutil.py  ClientAPI.py  ClientFUSE.py  cpuinfo.txt  generate_rsa_keys.py  get_API_token.py
Server/: Makefile  cpiinfo.txt  do_1000.sh
Server/App/: Ocall_implements.cpp  Ocall_pubkey.h  Ocall_sealing.h  enclave_u.c  enclave_u.h  server.cpp  server.h  someone
Server/Enclave/: Ecall_pubkey.h  Ecall_sealing.h  Ocall_wrappers.cpp  enclave.cpp  enclave.edl  enclave.h  enclave_t.c  enclave_t.h
Test/: client.py  someone_pri_key.pem
prog/: Makefile
prog/app/: Cargo.toml  Enclave_u.c  Enclave_u.h
prog/app/src/: db.rs  ecall.rs  main.rs  scratch_pad.rs  server.rs  util.rs
prog/enclave/: Cargo.toml  Enclave.edl  Enclave_private.pem  Enclave_public.pem  Enclave_t.c  Enclave_t.h
prog/enclave/src/: lib.rs  ocall.rs
